--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,14 @@
 *.exe
 *.out
 *.app
-
-# Bin
 bin/Rhyme*
+
+# Build related
+CMakeFiles
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+build
+
+# Tests
+tests/tests
