--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,17 @@ project(rhyme)
 enable_language(Fortran)
 add_compile_options(-Wall -Wextra -std=f2008)
 
-add_subdirectory(src/nombre)
-
 set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
+
+
+if(NOT TARGET nombre)
+  add_subdirectory(src/nombre)
+endif()
+add_subdirectory(src/chemistry)
+
 
 add_executable(rhyme src/main.f90)
 target_link_libraries(rhyme nombre)
+target_link_libraries(rhyme chemistry)
 
 install(TARGETS rhyme EXPORT rhyme-targets DESTINATION bin)
