--- a/src/rhyme_param_parser/tests/CMakeLists.txt
+++ b/src/rhyme_param_parser/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
-project( rhyme_tests )
+project( rhyme_param_parser_tests )
 
 enable_language ( C Fortran )
 enable_testing ()
 
 
 file ( GLOB_RECURSE test_files RELATIVE ${PROJECT_SOURCE_DIR} *_test.f90 )
+configure_file("../../../parameters.conf.example" "parameters.conf.example" COPYONLY)
 
 
 set ( test_libs )
@@ -20,7 +21,7 @@ create_test_sourcelist ( _ main.c ${test_libs} )
 
 add_library ( ${PROJECT_NAME}_fortran ${test_files} )
 add_executable ( ${PROJECT_NAME} main.c )
-target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran )
+target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_param_parser)
 
 
 set ( idx 0 )
