--- a/src/rhyme_param_parser/CMakeLists.txt
+++ b/src/rhyme_param_parser/CMakeLists.txt
@@ -5,7 +5,7 @@ enable_language ( Fortran )
 add_compile_options ( -Wall -Wextra -std=f2008 )
 
 
-set ( deps rhyme_samr )
+set ( deps rhyme_samr rhyme_samr_boundary_condition )
 
 foreach ( dep ${deps} )
   if( NOT TARGET ${dep} )
