--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/rhyme_samr_boundary_condition"]
 	path = src/rhyme_samr_boundary_condition
 	url = git@gitlab.com:rhyme-org/rhyme_samr_boundary_condition.git
+[submodule "src/rhyme_chemistry"]
+	path = src/rhyme_chemistry
+	url = git@gitlab.com:rhyme-org/rhyme_chemistry.git
