--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -3,7 +3,7 @@ base_grid = 32 32 1
 nlevels = 1
 nboxes = 1
 
-# Boundary conditions
+# Boundary Conditions
 left_bc = 1
 right_bc = 2
 bottom_bc = 3
@@ -11,5 +11,10 @@ top_bc = 1
 back_bc = 2
 front_bc = 3
 
-# Ideal gas
+# Ideal Gas
 ideal_gas_type = 1
+
+# Iterative Riemann Solver
+pressure_floor = 1.d-10
+tolerance = 1.d-6
+n_iteration = 100
