--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "src/rhyme_hydro_base"]
 	path = src/rhyme_hydro_base
 	url = git@gitlab.com:rhyme-org/rhyme_hydro_base.git
+[submodule "src/rhyme_cfl"]
+	path = src/rhyme_cfl
+	url = git@gitlab.com:rhyme-org/rhyme_cfl.git
