--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -1,5 +1,5 @@
 # Structured AMR
-base_grid = 32 32 1
+base_grid = 128 128 1
 nlevels = 1
 nboxes = 1
 
@@ -21,3 +21,12 @@ n_iteration = 100
 
 # CFL
 courant_number = .81d0
+
+# Initial Condition
+background = .125d0 0.d0 0.d0 0.d0 .1d0
+shape = rect 1 1 1 64 128 0
+shape_trans = 1 0.d0
+shape_fill = 0 1.d0 0.d0 0.d0 0.d0 1.d0
+shape = circle 3.d0 4.d0 5.d0 2.34d0
+shape_trans = 2 3.d0
+shape_fill = -2 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
