--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set ( deps
   rhyme_slope_limiter
   rhyme_iterative_riemann_solver
   rhyme_param_parser
+  rhyme_chombo
 )
 
 foreach ( dep ${deps} )
