Moved removed hdf parts of rhyme_chombo

--- a/src/rhyme_hdf5_util/CMakeLists.txt
+++ b/src/rhyme_hdf5_util/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library ( ${PROJECT_NAME} STATIC src/rhyme_hdf5_util.f90 )
 
 
 find_package ( HDF5 REQUIRED COMPONENTS Fortran )
-target_link_libraries( ${PROJECT_NAME} PRIVATE ${deps} ${HDF5_Fortran_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} PRIVATE ${HDF5_Fortran_LIBRARIES} )
 target_include_directories( ${PROJECT_NAME} PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
 
 
