Moved rhyme_hdf5_util under rhyme_chombo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set ( deps
   rhyme_initial_condition
   rhyme_slope_limiter
   rhyme_iterative_riemann_solver
+  rhyme_muscl_hancock
   rhyme_param_parser
   rhyme_muscl_hancock
   rhyme_chombo
