[WIP] Refactoring - samr_boundary_condition and mh_workspace renamed boundary_condition to bc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set ( deps
   rhyme_nombre
   rhyme_hydro_base
   rhyme_samr
-  rhyme_samr_boundary_condition
+  rhyme_samr_bc
   rhyme_cfl
   rhyme_ideal_gas
   rhyme_initial_condition
