--- a/src/rhyme_initial_condition/CMakeLists.txt
+++ b/src/rhyme_initial_condition/CMakeLists.txt
@@ -14,7 +14,7 @@ set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 set ( deps
   rhyme_samr
-  rhyme_samr_boundary_condition
+  rhyme_samr_bc
   rhyme_hydro_base
   rhyme_ideal_gas
 )
