--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
+imgae: gcc
 before_script:
-  - apt-get update -qq && apt-get install -y -qq gfortran cmake
+  - apt-get update -qq
+  - apt-get install -y gfortran cmake
+  - apt-get install -y libhdf5-7
   - mkdir -p build
 
 cmake:
