--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,12 @@
 before_script:
   - apt-get update -qq
   - apt-get install -y gfortran cmake
-  - apt-get install -y libhdf5-7
+  - apt-get install -y libhdf5-dev
   - mkdir -p build
 
 cmake:
   script:
-    - cd build && cmake .. && make && ctest --timeout 1 --output-on-failure
+    - cd build
+    - cmake ..
+    - make
+    - ctest --timeout 10 --output-on-failure
