[WIP] Log - Logging parameters (done)

--- a/src/rhyme_log/src/rhyme_logger_util/tests/CMakeLists.txt
+++ b/src/rhyme_log/src/rhyme_logger_util/tests/CMakeLists.txt
@@ -1,11 +1,11 @@
-project ( rhyme_log_tests )
+project ( rhyme_logger_util_tests )
 
 enable_language ( C Fortran )
 enable_testing ()
 
 
 file ( GLOB_RECURSE test_files RELATIVE ${PROJECT_SOURCE_DIR} *_test.f90 )
-
+file ( GLOB_RECURSE factory_files RELATIVE ${PROJECT_SOURCE_DIR} *_factory.f90 )
 
 
 set ( test_libs )
@@ -19,9 +19,9 @@ endforeach ( test_file )
 create_test_sourcelist ( _ main.c ${test_libs} )
 
 
-add_library ( ${PROJECT_NAME}_fortran ${test_files} )
+add_library ( ${PROJECT_NAME}_fortran ${test_files} ${factory_files} )
 add_executable ( ${PROJECT_NAME} main.c )
-target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_log )
+target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_logger_util )
 
 
 set ( idx 0 )
