[WIP] Spectrum - Added spectrum type

--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -38,3 +38,9 @@ shape_fill = grad_y 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
 # Chombo
 prefix = './prefix'
 nickname = 'hydro-simulation'
+
+# Sources
+source_coordinate = 0.12d0 0.34d0 0.56d0
+spectral_region = power_law 1.d0 2.d0 6.78d9 10 -1.7
+spectral_region = linear 2.d0 3.d0 5.67d8 15
+spectral_region = line 3.d0 3.01d0 4.56d7d8
