--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -27,7 +27,7 @@ limiter_omega = 1.23d0
 courant_number = .81d0
 
 # Initial Condition
-background = .125d0 0.d0 0.d0 0.d0 .1d0
+background = uniform .125d0 0.d0 0.d0 0.d0 .1d0
 shape = rect 1 1 1 64 128 1
 shape_trans = linear 0.d0
 shape_fill = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
@@ -35,7 +35,7 @@ shape = circle 3.d0 4.d0 5.d0 2.34d0
 shape_trans = cubic 3.d0
 shape_fill = grad_y 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
 
-# Chombo
+# Chombo Output
 prefix = './prefix'
 nickname = 'hydro-simulation'
 
