--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set ( deps
   rhyme_samr_bc
   rhyme_cfl
   rhyme_ideal_gas
-  rhyme_initial_condition
+  rhyme_drawing
   rhyme_slope_limiter
   rhyme_iterative_riemann_solver
   rhyme_muscl_hancock
