--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -1,6 +1,6 @@
-# Structured AMR
-base_grid = 128 128 1
-nlevels = 3
+# Initial Condition
+ic_grid = 128 128 1
+ic_nlevels = 3
 max_nboxes = 1 10 100
 
 # Boundary Conditions
