--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -1,9 +1,47 @@
-# Initial Condition
+# **Initial Condition**
+# Implemented types:
+# - simple: A simple uniform grid, initialized to zero
+# - snapshot: Loading a snapshot
+# NB: For each kind of IC, you should chose specific IC options as it's
+#     explained below
+#
+# Relevant options for simple IC:
+# - ic_grid: base_grid for the first level
+#            using 1 to reduce dimensionality, e.g. 128 1 1 for 1D simulation
+# - ic_nlevels: number of maximum levels ( refinement cannot exceed this limit )
+#   each level will be refined by a factor of two
+#   the minimum number of levels is 1
+# - example:
+#   ic_grid = 128 128 128
+#   ic_nlevels = 3
+#
+# Relevant options for snapshot IC:
+# - ic_type_and_path
+#   implemented types: rhyme, radamesh, r2c_2d
+# - example:
+#   ic_type_and_path = type path
+
 ic_grid = 128 128 1
 ic_nlevels = 3
+
+
+# **Runtime options**
+# Options:
+# - max_nboxes: Maximum number of boxes for each level
+# NB: In current implementation, the number of boxes cannot exceed these limits
+#     for each level
+
 max_nboxes = 1 10 100
 
-# Boundary Conditions
+
+# **Boundary Conditions**
+# Implemented types:
+# - reflective, periodic, outflow
+#
+# You can set the boundary conditions of different sides separately by using
+# all or a subset of following options:
+# - left_bc, right_bc, bottom_bc, top_bc, back_bc, front_bc
+
 left_bc = reflective
 right_bc = outflow
 bottom_bc = periodic
@@ -11,22 +49,42 @@ top_bc = reflective
 back_bc = outflow
 front_bc = periodic
 
-# Ideal Gas
-ideal_gas_type = monatomic
 
-# Iterative Riemann Solver
+# **Ideal Gas**
+# Implemented types:
+# - monatomic, diatomic, polyatomic
+
+ideal_gas_type = diatomic
+
+
+# **Iterative Riemann Solver**
+
 pressure_floor = 1.d-10
 tolerance = 1.d-6
 n_iteration = 100
 
-# Slope Limiter
+
+# **Slope Limiter**
+# Implemented slope limiters:
+# - van_leer, minmod, van_albada, superbee
+
 limiter = van_leer
 limiter_omega = 1.23d0
 
-# CFL
+
+# **CFL**
+
 courant_number = .81d0
 
-# Drawing
+
+# **Drawing**
+# Implemented canvases:
+# - uniform, transparent
+# Implemented shapes:
+# - rect
+# Implemented filling:
+# - uniform
+
 canvas = uniform .125d0 0.d0 0.d0 0.d0 .1d0
 shape = rect 1 1 1 64 128 1
 shape_trans = linear 0.d0
@@ -35,11 +93,18 @@ shape = circle 3.d0 4.d0 5.d0 2.34d0
 shape_trans = cubic 3.d0
 shape_fill = grad_y 1.d0 0.d0 0.d0 0.d0 1.d0 2.d0 3.d0 4.d0 5.d0 6.d0
 
-# Chombo Output
+
+# **Chombo Output**
+# You can use **prefix** option to drop output snapshot into a directory
+# **nickname** option use at the beginning of output filename following iteration number
+
 prefix = './prefix'
 nickname = 'hydro-simulation'
 
-# Sources
+
+# **Sources**
+# [PLACEHOLDER] Not yet implemented
+
 source_coordinate = 0.12d0 0.34d0 0.56d0
 opening_angle = 4 pi
 spectral_region = power_law 1.d0 2.d0 6.78d9 10 -1.7
