--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -1,10 +1,13 @@
 # **Initial Condition**
-# Implemented types:
-# - simple: A simple uniform grid, initialized to zero
-# - snapshot: Loading a snapshot
+# - ic_type:
+# - implemented types: simple, snapshot
+# -                    simple: A simple uniform grid, initialized to zero
+# -                    snapshot: Loading a snapshot
+
+ic_type = simple
+
 # NB: For each kind of IC, you should chose specific IC options as it's
 #     explained below
-#
 # Relevant options for simple IC:
 # - ic_grid: base_grid for the first level
 #            using 1 to reduce dimensionality, e.g. 128 1 1 for 1D simulation
@@ -16,10 +19,13 @@
 #   ic_nlevels = 3
 #
 # Relevant options for snapshot IC:
-# - ic_type_and_path
-#   implemented types: rhyme, radamesh, r2c_2d
+# - ic_snapshot_type:
+#   implemented types: rhyme, r2c_2d
+# - ic_snapshot_path: path to the snapshot
+#
 # - example:
-#   ic_type_and_path = type path
+#   ic_snapshot_type = rhyme
+#   ic_snapshot_path = /path/to/rhyme/chombo/snapshot
 
 ic_grid = 128 128 1
 ic_nlevels = 3
