--- a/src/rhyme_chombo/src/rhyme_hdf5_util/CMakeLists.txt
+++ b/src/rhyme_chombo/src/rhyme_hdf5_util/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required ( VERSION 3.7 )
 
 project ( rhyme_hdf5_util )
-enable_language ( C Fortran )
-add_compile_options ( -Wall -Wextra -std=f2008 )
+
+enable_language ( Fortran )
+add_compile_options ( -Wall -Wextra )
+set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
 
 
 set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
@@ -12,7 +14,11 @@ set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
 set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 
-add_library ( ${PROJECT_NAME} STATIC src/rhyme_hdf5_util.f90 )
+set ( srcs
+  src/rhyme_hdf5_util.f90
+)
+
+add_library ( ${PROJECT_NAME} STATIC ${srcs} )
 
 
 find_package ( HDF5 REQUIRED COMPONENTS Fortran )
