--- a/src/rhyme_ideal_gas/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required ( VERSION 3.7 )
 
 project ( rhyme_ideal_gas )
+
 enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra -std=f2008 )
+add_compile_options ( -Wall -Wextra )
+set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
 
 
 set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
@@ -36,7 +38,12 @@ foreach ( i_dep ${internal_deps} )
 endforeach ( i_dep )
 
 
-add_library ( ${PROJECT_NAME} STATIC src/rhyme_ideal_gas.f90 )
+set ( srcs
+  src/rhyme_ideal_gas.f90
+)
+
+
+add_library ( ${PROJECT_NAME} STATIC ${srcs} )
 target_link_libraries ( ${PROJECT_NAME} PRIVATE ${deps} ${internal_deps} )
 
 
