--- a/src/rhyme_ideal_gas/src/rhyme_chemistry/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/src/rhyme_chemistry/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required ( VERSION 3.7 )
 
 project ( rhyme_chemistry )
+
 enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra -std=f2008 )
+add_compile_options ( -Wall -Wextra )
+set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
 
 
 set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
@@ -23,7 +25,12 @@ foreach ( dep ${deps} )
 endforeach ( dep )
 
 
-add_library ( ${PROJECT_NAME} STATIC src/rhyme_chemistry.f90 )
+set ( srcs
+  src/rhyme_chemistry.f90
+)
+
+
+add_library ( ${PROJECT_NAME} STATIC ${srcs} )
 target_link_libraries ( ${PROJECT_NAME} ${deps} )
 
 
