--- a/src/rhyme_riemann_problem/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required ( VERSION 3.5 )
 
 project ( rhyme_riemann_problem )
+
 enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra -std=f2008 )
+add_compile_options ( -Wall -Wextra )
+set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
 
 
 set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
@@ -12,7 +14,12 @@ set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
 set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 
-add_library ( ${PROJECT_NAME} STATIC src/rhyme_riemann_problem.f90 )
+set ( srcs
+  src/rhyme_riemann_problem.f90
+)
+
+
+add_library ( ${PROJECT_NAME} STATIC ${srcs} )
 
 
 add_subdirectory ( tests )
