--- a/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
+++ b/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
@@ -25,6 +25,7 @@ endforeach ( dep )
 
 set ( srcs
   src/rhyme_logger_util.f90
+  src/rhyme_logger_util_log.f90
 )
 
 add_library ( ${PROJECT_NAME} STATIC ${srcs} )
