--- a/src/rhyme_log/src/rhyme_logger_util/tests/CMakeLists.txt
+++ b/src/rhyme_log/src/rhyme_logger_util/tests/CMakeLists.txt
@@ -17,11 +17,10 @@ foreach ( test_file ${test_files} )
   list ( APPEND test_libs ${test_lib}_ )
 endforeach ( test_file )
 
-
 create_test_sourcelist ( _ main.c ${test_libs} )
 
 
-add_library ( ${PROJECT_NAME}_fortran ${test_files} ${factory_files} )
+add_library ( ${PROJECT_NAME}_fortran ${test_files} ${ext_factories} )
 add_executable ( ${PROJECT_NAME} main.c )
 target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_logger_util )
 
