[Done] Log module refactored

--- a/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
+++ b/src/rhyme_log/src/rhyme_logger_util/CMakeLists.txt
@@ -28,6 +28,10 @@ set ( srcs
   src/rhyme_logger_util_log.f90
   src/rhyme_logger_util_warn.f90
   src/rhyme_logger_util_err.f90
+  src/rhyme_logger_util_done.f90
+  src/rhyme_logger_util_io.f90
+  src/rhyme_logger_util_logo.f90
+  src/rhyme_logger_util_time.f90
 )
 
 add_library ( ${PROJECT_NAME} STATIC ${srcs} )
