--- a/src/rhyme_ideal_gas/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/CMakeLists.txt
@@ -16,7 +16,7 @@ set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 set ( deps
   rhyme_hydro_base
-  rhyme_nombre
+  rhyme_log
 )
 
 foreach ( dep ${deps} )
@@ -41,7 +41,6 @@ endforeach ( i_dep )
 set ( srcs
   src/rhyme_ideal_gas.f90
 )
-
 
 add_library ( ${PROJECT_NAME} STATIC ${srcs} )
 target_link_libraries ( ${PROJECT_NAME} PRIVATE ${deps} ${internal_deps} )
