--- a/src/rhyme_samr_bc/CMakeLists.txt
+++ b/src/rhyme_samr_bc/CMakeLists.txt
@@ -17,6 +17,7 @@ set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 set ( deps
   rhyme_hydro_base
   rhyme_samr
+  rhyme_log
 )
 
 foreach ( dep ${deps} )
