[WIP] Passing log object - to muscl_hancock, cfl and slope_limiter modules

--- a/src/rhyme_slope_limiter/tests/CMakeLists.txt
+++ b/src/rhyme_slope_limiter/tests/CMakeLists.txt
@@ -21,7 +21,16 @@ endforeach(test_file)
 create_test_sourcelist ( _ main.c ${test_libs} )
 
 
-add_library ( ${PROJECT_NAME}_fortran ${test_files} ${factory_files} )
+set ( factories
+  rhyme_hydro_base
+)
+
+foreach ( factory ${factories} )
+  list ( APPEND ext_factories ../../${factory}/tests/${factory}_factory.f90 )
+endforeach ( factory )
+
+
+add_library ( ${PROJECT_NAME}_fortran ${test_files} ${factory_files} ${ext_factories} )
 add_executable ( ${PROJECT_NAME} main.c )
 target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_slope_limiter )
 
