[WIP] Advection test - first implementation

--- a/src/rhyme_muscl_hancock/tests/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/tests/CMakeLists.txt
@@ -10,8 +10,6 @@ file ( GLOB_RECURSE test_files RELATIVE ${PROJECT_SOURCE_DIR} *_test.f90 )
 file ( GLOB_RECURSE factory_files RELATIVE ${PROJECT_SOURCE_DIR} *_factory.f90 )
 
 
-set ( test_libs )
-
 foreach ( test_file ${test_files} )
   get_filename_component ( test_lib ${test_file} NAME_WE )
   list ( APPEND test_libs ${test_lib}_ )
@@ -20,18 +18,29 @@ endforeach ( test_file )
 create_test_sourcelist ( _ main.c ${test_libs} )
 
 
+set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
+set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
+
+
 set ( factories
   rhyme_samr
+  rhyme_samr_bc
+  rhyme_chombo
 )
 
 foreach ( factory ${factories} )
-  list ( APPEND ext_factories ../../${factory}/tests/${factory}_factory.f90 )
+  list ( APPEND factory_files ../../${factory}/tests/${factory}_factory.f90 )
+
+  if ( NOT TARGET ${factory} )
+    add_subdirectory ( ../../${factory} ${CMAKE_BINARY_DIR}/${factory} )
+  endif ()
 endforeach ( factory )
 
+add_library ( ${PROJECT_NAME}_fortran STATIC ${test_files} ${factory_files} )
+add_dependencies( ${PROJECT_NAME}_fortran ${factories} rhyme_muscl_hancock )
 
-add_library ( ${PROJECT_NAME}_fortran ${test_files} ${factory_files} ${ext_factories} )
 add_executable ( ${PROJECT_NAME} main.c )
-target_link_libraries ( ${PROJECT_NAME} ${PROJECT_NAME}_fortran rhyme_muscl_hancock )
+target_link_libraries ( ${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_fortran ${factories} rhyme_muscl_hancock )
 
 
 set ( idx 0 )
