--- a/src/rhyme_riemann_problem/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/CMakeLists.txt
@@ -14,12 +14,24 @@ set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
 set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
 
 
+set ( deps
+)
+
+foreach ( dep ${deps} )
+  if ( NOT TARGET ${dep} )
+    add_subdirectory ( ../${dep} ${CMAKE_BINARY_DIR}/${dep} )
+  endif ()
+endforeach ( dep )
+
+
 set ( srcs
   src/rhyme_riemann_problem.f90
 )
 
 
 add_library ( ${PROJECT_NAME} STATIC ${srcs} )
+target_link_libraries ( ${PROJECT_NAME} PRIVATE ${deps} )
+
 
 
 add_subdirectory ( tests )
