[WIP] Advection test - Moved riemann_problem module under IRS

--- a/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
+++ b/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
@@ -19,7 +19,7 @@ set ( deps
 
 foreach ( dep ${deps} )
   if ( NOT TARGET ${dep} )
-    add_subdirectory ( ../${dep} ${CMAKE_BINARY_DIR}/${dep} )
+    add_subdirectory ( ../../../${dep} ${CMAKE_BINARY_DIR}/${dep} )
   endif ()
 endforeach ( dep )
 
