--- a/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
+++ b/src/rhyme_irs/src/rhyme_riemann_problem/CMakeLists.txt
@@ -1,38 +1,15 @@
-cmake_minimum_required ( VERSION 3.5 )
+cmake_minimum_required( VERSION 3.5 )
+enable_language( Fortran )
 
-project ( rhyme_riemann_problem )
+project( rhyme_riemann_problem )
 
-enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra )
-set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
+set( deps )
 
+set( internal_deps )
 
-set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
-set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
-
-
-set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
-
-
-set ( deps
-)
-
-foreach ( dep ${deps} )
-  if ( NOT TARGET ${dep} )
-    add_subdirectory ( ../../../${dep} ${CMAKE_BINARY_DIR}/${dep} )
-  endif ()
-endforeach ( dep )
-
-
-set ( srcs
+set( srcs
   src/rhyme_riemann_problem.f90
 )
 
-
-add_library ( ${PROJECT_NAME} STATIC ${srcs} )
-target_link_libraries ( ${PROJECT_NAME} PRIVATE ${deps} )
-
-
-
-add_subdirectory ( tests )
-enable_testing ()
+set( proj_src_dir ../../.. )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CMakeGlobal/CMakeLists.txt )
