--- a/src/rhyme_log/CMakeLists.txt
+++ b/src/rhyme_log/CMakeLists.txt
@@ -1,45 +1,17 @@
-cmake_minimum_required ( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.7 )
+enable_language( Fortran )
 
-project ( rhyme_log )
+project( rhyme_log )
 
-enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra )
-set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
+set( deps )
 
-
-set ( LIB_DIR ${CMAKE_BINARY_DIR}/lib CACHE PATH "Lib directory" )
-set ( INCLUDE_DIR ${CMAKE_BINARY_DIR}/include CACHE PATH "Include directory" )
-
-
-set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
-
-
-set ( deps )
-
-foreach ( dep ${deps} )
-  if( NOT TARGET ${dep} )
-    add_subdirectory ( ../${dep} ${CMAKE_BINARY_DIR}/${dep} )
-  endif ()
-endforeach ( dep )
-
-
-set ( internal_deps
+set( internal_deps
   rhyme_logger_util
 )
 
-foreach ( i_dep ${internal_deps} )
-  if ( NOT TARGET ${i_dep} )
-    add_subdirectory ( src/${i_dep} )
-  endif ()
-endforeach ( i_dep )
-
-
-set ( srcs
+set( srcs
   src/rhyme_log.f90
 )
 
-add_library ( ${PROJECT_NAME} STATIC ${srcs} )
-target_link_libraries ( ${PROJECT_NAME} PRIVATE ${deps} ${internal_deps} )
-
-add_subdirectory ( tests )
-enable_testing ()
+set( proj_src_dir .. )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
