--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -1,20 +1,13 @@
-cmake_minimum_required ( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.7 )
+enable_language( Fortran )
 
-project ( rhyme_nombre )
+project( rhyme_nombre )
 
-enable_language ( Fortran )
-add_compile_options ( -Wall -Wextra )
-set ( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008" )
+set( deps )
 
+set( internal_deps )
 
-set ( LIB_DIR "${PROJECT_SOURCE_DIR}/lib" CACHE PATH "lib directory" )
-set ( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include" CACHE PATH "include directory" )
-
-
-set ( CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIR} )
-
-
-set ( srcs
+set( srcs
   src/rhyme_dimension.f90
   src/rhyme_nombre.f90
   src/rhyme_prefix.f90
@@ -22,8 +15,5 @@ set ( srcs
   src/rhyme_units.f90
 )
 
-add_library ( rhyme_nombre STATIC ${srcs} )
-
-
-add_subdirectory ( tests )
-enable_testing ()
+set( proj_src_dir .. )
+include( ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeGlobal/CMakeLists.txt )
