[WIP] Using assertion - radamesh_spectrum

--- a/src/radamesh_spectrum/tests/CMakeLists.txt
+++ b/src/radamesh_spectrum/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( radamesh_spectrum_tests )
 set( test_subject radamesh_spectrum )
 
 set( factories )
-set( test_deps )
+
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
