--- a/src/rhyme_chombo/src/rhyme_hdf5_util/tests/CMakeLists.txt
+++ b/src/rhyme_chombo/src/rhyme_hdf5_util/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( rhyme_hdf5_util_tests )
 set( test_subject rhyme_hdf5_util )
 
 set( factories )
-set( test_deps )
+
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../CMakeGlobal/tests/CMakeLists.txt )
