[WIP] Using assertion - rhyme_hydro_base Adding double/real comparison to assertion module

--- a/src/rhyme_hydro_base/tests/CMakeLists.txt
+++ b/src/rhyme_hydro_base/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( rhyme_hydro_base_tests )
 set( test_subject rhyme_hydro_base )
 
 set( factories )
-set( test_deps )
+
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
