--- a/src/rhyme_ideal_gas/src/rhyme_chemistry/tests/CMakeLists.txt
+++ b/src/rhyme_ideal_gas/src/rhyme_chemistry/tests/CMakeLists.txt
@@ -2,7 +2,10 @@ project( rhyme_chemistry_tests )
 set( test_subject rhyme_chemistry )
 
 set( factories )
-set( test_deps )
+
+set( test_deps
+  rhyme_assertion
+)
 
 set( proj_src_dir ../../../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../CMakeGlobal/tests/CMakeLists.txt )
