[WIP] Units - refactor: param_parser module

--- a/src/rhyme_param_parser/CMakeLists.txt
+++ b/src/rhyme_param_parser/CMakeLists.txt
@@ -19,6 +19,14 @@ set( deps
 set( internal_deps )
 
 set( srcs
+  src/rhyme_param_parser_add_occur.f90
+  src/rhyme_param_parser_occurences.f90
+  src/rhyme_param_parser_read_array.f90
+  src/rhyme_param_parser_read.f90
+  src/rhyme_param_parser_new_term.f90
+  src/rhyme_param_parser_add_switch.f90
+  src/rhyme_param_parser_init.f90
+  src/rhyme_param_parser_load_params.f90
   src/rhyme_param_parser.f90
 )
 
