--- a/src/rhyme_param_parser/tests/CMakeLists.txt
+++ b/src/rhyme_param_parser/tests/CMakeLists.txt
@@ -13,5 +13,11 @@ configure_file(
   COPYONLY
 )
 
+configure_file(
+  "./assets/occurences.txt"
+  "occurences.txt"
+  COPYONLY
+)
+
 set( proj_src_dir ../.. )
 include( ${CMAKE_CURRENT_SOURCE_DIR}/../../../CMakeGlobal/tests/CMakeLists.txt )
