--- a/parameters.conf.example
+++ b/parameters.conf.example
@@ -79,8 +79,8 @@ n_iteration = 100
 # Implemented slope limiters:
 # - van_leer, minmod, van_albada, superbee
 
-limiter = van_leer
-limiter_omega = 0.d0
+slope_limiter = van_leer
+slope_limiter_omega = 0.d0
 
 
 # **MUSCL-Hancock solver**
@@ -107,23 +107,16 @@ solver_type = cpu_intensive
 canvas = uniform .125d0 0.d0 0.d0 0.d0 .1d0
 
 shape = cuboid 1 1 1 56 128 1
-shape_transition_top = ramp 2.5d0
-shape_transition_top_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
-shape_transition_bottom = linear 1.5d0
-shape_transition_bottom_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
-shape_filling = uniform
-shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
 
 shape = prism 56 1 1 56 128 1 72 1 1 1
-shape_filling = uniform
-shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
 
 shape = sphere 3.d0 4.d0 5.d0 2.34d0
-shape_filling = uniform
-shape_filling_colors = 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = uniform 1.d0 0.d0 0.d0 0.d0 1.d0
 
 shape = smoothed_slab_2d x 56 72 .2 .4
-shape_filling_colors = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
+shape_filling = .125d0 0.d0 0.d0 0.d0 .1d0 1.d0 0.d0 0.d0 0.d0 1.d0
 
 perturb = harmonic cartesian x 0.05 32 0.d0 0.d0 0.d0 0.d0 1.d0
 perturb = symmetric_decaying cartesian y 1.d0 56 2 0.d0 0.d0 0.d0 0.d0 1.d0
