[WIP] Units - refactor: nombre

--- a/src/rhyme_nombre/CMakeLists.txt
+++ b/src/rhyme_nombre/CMakeLists.txt
@@ -8,11 +8,11 @@ set( deps )
 set( internal_deps )
 
 set( srcs
-  src/rhyme_dimension.f90
+  src/rhyme_nombre_dimension.f90
+  src/rhyme_nombre_prefix.f90
+  src/rhyme_nombre_unit.f90
+  src/rhyme_nombre_units.f90
   src/rhyme_nombre.f90
-  src/rhyme_prefix.f90
-  src/rhyme_unit.f90
-  src/rhyme_units.f90
 )
 
 set( proj_src_dir .. )
